# DFS_manager

./: .gitignore  README.MD  README.md
0.0.1/: agent.py  metadata.json
agents/auth-agent/: agent.py  metadata.json
agents/manager-agent/: agent.py  metadata.json
agents/manager-agent/0.0.1/: agent.py  metadata.json
agents/nft-agent/: agent.py  metadata.json
agents/storage-agent/: agent.py  metadata.json
agents/storage-agent/0.0.1/: agent.py  metadata.json
agents/upload-agent/: agent.py  metadata.json
contract/dfs_manager/: Cargo.toml  README.md
contract/dfs_manager/src/: lib.rs
scripts/: agents_description.json  create_vector_store.py  test_imports.py  test_store.py  uploadFile.py
