[package]
name = "dfs_manager"
description = "cargo-near-new-project-description"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/jcarbonnell/DFS_manager"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.near.reproducible_build]
image = "sourcescan/cargo-near:0.13.3-rust-1.84.1"
image_digest = "sha256:baa712c5d2b7522d38175e36330d336ad2c4ce32bfaaa41af94ce40407ecd803"
passed_env = []
container_build_command = ["cargo", "near", "build", "non-reproducible-wasm", "--locked"]

[dependencies]
near-sdk = "5.11.0"
borsh = "1.5"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
schemars = "0.8.22"

[dev-dependencies]
near-sdk = { version = "5.11.0", features = ["unit-testing"] }
near-parameters = "0.25.0"
near-workspaces = { version = "0.16", features = ["unstable"] }
tokio = { version = "1.12.0", features = ["full"] }
serde_json = "1"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true